codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__background_exit_tests__daemon_disconnect_exit.snap
---
source: tui/src/app/tests/background_exit_tests.rs
expression: output
---
Disconnected from this task. Any running work continues.
To reconnect, run:
  blackarrow resume THREAD_ID
Stop the current turn: run blackarrow agents, select this task, and press f10.
Token usage so far: total=12 input=10 output=2
